Constrain main content to prevent overflow.

--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@
 
 #app-main {
   border: 4px solid red;
-  height: 100%;
   grid-area: main;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
 }
